--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <h1>About Me!</h1>
-        <img src="me.PNG"
+        <img src="images/me.PNG"
             width="255" 
             height="400" />
         <h2>Ethan Smith</h2>
