--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -9,9 +9,9 @@
 
 <body>
   <header>
-    <h1>[Site name] Site Plan</h1>
-    <h2>[FirstName LastName]</h2>
-    <h2>WDD 130-[section]</h2>
+    <h1>Dry Oar, Site Plan </h1>
+    <h2>Ethan Smith</h2>
+    <h2>WDD 130-23</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -19,11 +19,18 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
+    <p> Dry Oar White Water Rafting seeks to make river sports more accesible to the average person. Here at Dry Oar, anybody
+      can rent all kinds of river gear for river sports. We carry tubes, rafts, lifejackets, even paddleboards. We are passionate 
+      here at Dry Oar in making river sports more affordable and fun!
+    </p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p> Dry Oar White Water Rafting is for anyone who wants to experience the beauty and the thrill of river sports. From casual first 
+      goers to experienced rafting experts, we will ensure that you will find the perfect gear for your ability level. As long as you are
+      ready for some adventure, we are happy to serve you! We have rented out to many college students, families, and even 
+      some river sports groups.
+    </p>
     <!-- change this -->
 
     <hr />
