--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -9,7 +9,7 @@
 
 <body>
   <header>
-    <h1>Dry Oar, Site Plan </h1>
+    <h1>Glacier Raft Company Site Plan </h1>
     <h2>Ethan Smith</h2>
     <h2>WDD 130-23</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
@@ -19,17 +19,18 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p> Dry Oar White Water Rafting seeks to make river sports more accesible to the average person. Here at Dry Oar, anybody
-      can rent all kinds of river gear for river sports. We carry tubes, rafts, lifejackets, even paddleboards. We are passionate 
-      here at Dry Oar in making river sports more affordable and fun!
+    <p> Glacier Raft Company is the best river rental company in Montana. Here at glacier we seek
+      to make river sports more accesible to the average person. We make it so that Anybody can easily rent 
+      all kinds of river gear for river sports. We carry tubes, rafts, lifejackets, even paddleboards. 
+      We are passionate here at Glacier in making river sports more affordable and fun!
     </p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p> Dry Oar White Water Rafting is for anyone who wants to experience the beauty and the thrill of river sports. From casual first 
-      goers to experienced rafting experts, we will ensure that you will find the perfect gear for your ability level. As long as you are
-      ready for some adventure, we are happy to serve you! We have rented out to many college students, families, and even 
-      some river sports groups.
+    <p> Glacier Raft Company is for anyone who wants to experience the beauty and the thrill of river sports. 
+      From casual first goers to experienced rafting experts, we will ensure that you will find the perfect gear 
+      for your ability level. As long as you are ready for some adventure, we are happy to serve you! We have rented 
+      out to many college students, families, and many other river sports groups.
     </p>
     <!-- change this -->
 
@@ -37,7 +38,7 @@
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
+    <img src="images/logo.png" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -48,8 +49,8 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
-      target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+    <a href="https://coolors.co/003049-4f5d75-bfc0c0-ffffff-ef8354"
+      target="_blank">https://coolors.co/003049-4f5d75-bfc0c0-ffffff-ef8354</a>
 
     <table class="colors">
       <tr>
@@ -60,9 +61,9 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
-        <td class="secondary">[#E7C24F]</td>
-        <td class="accent1">[#A43312]</td>
+        <td class="primary">[#003049]</td>
+        <td class="secondary">[#BFC0C0]</td>
+        <td class="accent1">[#EF8354]</td>
         <td class="accent2"></td>
       </tr>
     </table>
