--- a/index.html
+++ b/index.html
@@ -11,15 +11,10 @@
         <h1>WDD 130 portal page - Ethan Smith</h1>
         <nav>
             <ul>
-                <li>
-                    <a href="aboutme/index.html"> About Me </a>
-                </li>
-                <li>
-                    <a href="wwr/index.html"> Whitewater Rafting Website </a>
-                </li>
-                <li>
-                    <a href="wwr/site-plan-rafting.html"> Whitewater Rafting Site Plan </a>
-                </li>
+                <li> <a href="aboutme/index.html"> About Me </a> </li>
+                <li> <a href="wwr/index.html"> Whitewater Rafting Website </a></li>
+                <li> <a href="wwr/site-plan-rafting.html"> Whitewater Rafting Site Plan </a> </li>
+                <li> <a href="#"> Final Project </a></li>
             </ul>
         </nav>
         
