--- a/wwr/index.html
+++ b/wwr/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="stylesheet" href="styles/style.css">
 <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations | Glacier Raft Company | Home</title>
     <body>
+    <div id="content">
         <header>
             <a id="logo_link" href="index.html">
             <img class="logo" src="images/logo.png" alt="Glacier Raft Logo">
@@ -41,14 +43,15 @@
                 <h2>Camping</h2>
             </section>
             <section class="rapids-card">
-                <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
-                <img class="icon" src="images/oars.png" alt="oars icon">
+                <img class="boat" src="images/rapids.jpg" alt="rafting boat">
+                <img class="oars" src="images/oars.png" alt="oars icon">
                 <h2>Rapids</h2>
             </section>
+            <div id="background"></div> 
             <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
             <section class="msg">
-                <h2>The Perfect Oppurtunity!</h2>
-                <p>Renting from Glacier Raft Company is the perfect oppurtunity for a great adventure that anyone can enjoy! From the beautiful mountains, and gorgeous riverbeds plus the thrill of the rapids, these rivers have something for everyone and we make it affordable!  </p>
+                <h2>More Than Just The Thrill</h2>
+                <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
                 <a class='join' href="rivers.html">Join Us</a>
             </section>
         </main>
@@ -57,16 +60,17 @@
             <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
             <h3><a href="contactus.html">Contact Us</a></h3>
             <div class="social">
-                <a href="https://facebook.com">
+                <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
                 </a>
-                <a href="https://twitter.com">
+                <a href="https://twitter.com" target="_blank">
                     <img src="images/twitter.png" alt="twitter icon">
                 </a>
-                <a href="https://instagram.com">
+                <a href="https://instagram.com" target="_blank">
                     <img src="images/instagram.png" alt="instagram icon">
                 </a>
             </div>
         </footer>
-        </body>                             
+    </div>
+    </body>                             
 </html>
