--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -101,16 +101,17 @@
     <h3>Navigation</h3>
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Page2</a>
+      <a href="wwr/index.html">Home</a>
+      <a href="wwr/pricing.html">Page2</a>
       <a href="#">Contact Us</a>
     </nav>
     <hr />
+
     <h2>Site Map</h2>
     <div class="sitemap">
       <div class="sm-home">Home</div>
       <div class="sm-page2">
-        [Page2]
+        Rates and Dates
         <!-- this page will have a name later -->
       </div>
       <div class="sm-page3">Contact Us</div>
@@ -125,11 +126,10 @@
 
     <h3>Home</h3>
 
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
+    <img src="images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
-
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+    <h3>Rates/Dates</h3>
+    <img src="images/wireframe-two.jpg" alt="page 2 wireframe">
   </main>
 </body>
 
