--- a/wwr/index.html
+++ b/wwr/index.html
@@ -14,7 +14,7 @@
             </a>
             <nav>
                 <a href="index.html"> Home</a>
-                <a href="#">Page 2</a>
+                <a href="rates.html">Rates and Dates</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="contactus.html"> Contact Us</a>
             </nav>
@@ -27,7 +27,7 @@
                 <h1 class="home-title"> More Than Just An Adventure</h1>
                 <h4>Make Memories with Glacier Raft Company </h4>
                 <div class='button-box'>
-                    <a class='book' href="rates.html">Book Now</a>
+                    <a class='book' href="rates.html">Reservations</a>
                 </div>
             </section>
         </div>
