--- a/wwr/rates.html
+++ b/wwr/rates.html
@@ -48,13 +48,13 @@ Desolation 6 night Trip 2016 Pricing and Dates Regular Rate: $1,790 Trip Dates J
                 <div id="gc3">
                 <h2>Grand Canyon Three Night Trip</h2>
                 <h1>$1,475</h1>
-                <p>April (30)
-                   May (13, 20, 27, 30)
-                   June (3, 10, 17, 24, 28)
-                   July (1, 8, 15, 22, 29)
-                   August (5, 12, 19, 26)
-                   September (9, 17)
-                </p>
+                   <p>Dates include:</p>
+                   <p>April: 30</p>
+                   <p>May: 13, 20, 27, 30</p>
+                   <p>June: 3, 10, 17, 24, 28</p>
+                   <p>July: 1, 8, 15, 22, 29</p>
+                   <p>August: 5, 12, 19, 26</p>
+                   <p>September: 9, 17</p>
                 </div>
             </section>
 
@@ -65,13 +65,13 @@ Desolation 6 night Trip 2016 Pricing and Dates Regular Rate: $1,790 Trip Dates J
                 <div id="gc6">
                 <h2>Grand Canyon Six Night Trip</h2>
                 <h1>$2,550</h1>
-                <p>April (25)
-                   May (8, 15, 22, 25, 29)
-                   June (5, 12, 19, 23, 26)
-                   July (3, 10, 17, 24, 31)
-                   August (7, 14, 21)
-                   September (4, 12)
-                </p>
+                  <p>Dates Include:</p>
+                  <p>April: 25</p>
+                  <p> May: 8, 15, 22, 25, 29</p>
+                  <p>June: 5, 12, 19, 23, 26</p>
+                  <p> July: 3, 10, 17, 24, 31</p>
+                  <p>August: 7, 14, 21</p>
+                  <p> September: 4, 12</p>
                 </div>
             </section>
 
@@ -82,10 +82,10 @@ Desolation 6 night Trip 2016 Pricing and Dates Regular Rate: $1,790 Trip Dates J
                 <div id="sr5">
                 <h2>Salmon River Five Night Trip</h2>
                 <h1>$1,790</h1>
-                <p>July (10, 18, 26)
-                   Aug (3, 11, 19, 27)
-                   Sept (4)
-                </p>
+                <p>Dates include: </p>
+                <p>July: 10, 18, 26</p>
+                <p>Aug: 3, 11, 19, 27</p>
+                <p>Sept: 4</p>
                 </div>
             </section>
         </main>
