--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li> <a href="aboutme/index.html"> About Me </a> </li>
                 <li> <a href="wwr/index.html"> Whitewater Rafting Website </a></li>
                 <li> <a href="wwr/site-plan-rafting.html"> Whitewater Rafting Site Plan </a> </li>
-                <li> <a href="#"> Final Project </a></li>
+                <li> <a href="personal-site/index.html"> Final Project </a></li>
             </ul>
         </nav>
         
