--- a/personal-site/site-plan.html
+++ b/personal-site/site-plan.html
@@ -153,7 +153,7 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        Running should be easy and fun! Here at Running Works we are working towards helping 
+        Running should be easy and fun! Here at Training4u we are working towards helping 
         you achieve your running dreams! 
 
         Get a free training specified to your running type!
