--- a/personal-site/index.html
+++ b/personal-site/index.html
@@ -34,7 +34,7 @@
             </div>
             <section id="hero-msg-two">
                 <h1 class="home-title-two">Meet other local runners </h1>
-                <h4>Feel free to come to our monthly work, check our mailing list for information! </h4>
+                <h4>Feel free to come to our monthly workouts, check our mailing list for information! </h4>
             </section>
         </div>
 
@@ -49,7 +49,7 @@
             </section>
             <section class="recover">
                 <img class="recover-img" src="pictures/asfault-running.jpg" alt="recover image">
-                <h2>Easy Runs To recover</h2>
+                <h2>Build Endurance</h2>
             </section>
 
 
