--- a/personal-site/index.html
+++ b/personal-site/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Traning Plans Made Easy | Training4u | Homes </title>
+    <title>Training Plans Made Easy | Training4u | Homes </title>
 </head>
 <body>
     <div id="content">
@@ -21,16 +21,20 @@
 
             </nav>
         </header>
-        <div id="Hero">
+        
+        <div id="hero-one">
             <div id="hero-box-one">
                 <img id="hero-img-one" src="pictures/woman-running.jpg" alt="Training Plans">
             </div>
+
             <section id="hero-msg-one">
                 <h1 class="home-title-one"> Start Now With Training4u</h1>
-                <h4>Make your running dreams come true with unique and personal training plans </h4>
+                <h4>Make your running dreams come true with our unique and personal training plans </h4>
             </section>
+        </div>
+        <div id="hero-two">>
             <div id="hero-box-two">
-                <img id="hero-img-two" src="pictures/running-group.jpg" alt="group training">
+                <img id="hero-img-two" src="pictures/running-group.png" alt="group training">
             </div>
             <section id="hero-msg-two">
                 <h1 class="home-title-two">Meet other local runners </h1>
@@ -51,46 +55,44 @@
                 <img class="recover-img" src="pictures/asfault-running.jpg" alt="recover image">
                 <h2>Build Endurance</h2>
             </section>
-
-
+            </div> 
         </main>
-        <footer>
-            <section class="E-mail-list">
-                <h3>Join Our E-mail List</h3>
-                <p>Get helpful training tips and tricks every week! </p>
-                <form action="/emial-list" method="post">
-                     <li>
-                       <label for="mail">E-mail:</label>
-                       <input type="email" id="mail" name="user_email">
-                     </li>
-                   </form>
-            </section>
-            <div class="social">
-                <h3>Join Our Socials</h3>
-                <a href="https://facebook.com" target="_blank">
-                    <img src="pictures/facebook.png" alt="fb icon">
-                </a>
-                <a href="https://twitter.com" target="_blank">
-                    <img src="pictures/twitter.png" alt="twitter icon">
-                </a>
-                <a href="https://instagram.com" target="_blank">
-                    <img src="pictures/instagram.png" alt="instagram icon">
-                </a>
-            </div>
-            <div id="site-plan">
-                <h3>Learn More About Our Company</h3>
-                <div class='button-box'>
-                    <a class='company-info' href="site-plan.html">Site Plan</a>
-                </div>
-            </div>
-            <div id="copyright">
-            <h3>Training4u </h3>
+
+        
+        <footer class="bottom-grid">
+                <section class="E-mail-list">
+                    <h3>Join Our E-mail List</h3>
+                    <p>Get helpful training tips and tricks every week! </p>
+                    <form action="/emial-list" method="post">
+                        <label for="mail">E-mail:</label>
+                        <input type="email" id="mail" name="user_email">
+                    </form>
+                </section>
+                <section class="social">
+                    <h3>Join Our Socials</h3>
+                    <a href="https://facebook.com" target="_blank">
+                        <img src="pictures/facebook.png" alt="fb icon">
+                    </a>
+                    <a href="https://twitter.com" target="_blank">
+                        <img src="pictures/twitter.png" alt="twitter icon">
+                    </a>
+                    <a href="https://instagram.com" target="_blank">
+                        <img src="pictures/instagram.png" alt="instagram icon">
+                    </a>
+                </section>
+                <section class="site-plan">
+                    <h3>Learn More About Our Company</h3>
+                    <div class='button-box'>
+                        <a class='company-info' href="site-plan.html">Site Plan</a>
+                    </div>
+                </section>
+        </footer>
+        <div id="copyright">
             <a id="logo_link" href="index.html">
-                <img class="running-logo" src="pictures/running-logo.png" alt="Training4u Logo">
+                <img class="running-logo-two" src="pictures/running-logo.png" alt="Training4u Logo">
             </a>
-            <h3> WDD-130/Ethan Smith &copy; 2022 </h3>
+            <p> Training4u &copy; 2022 - Ethan Smith</p>
             </div>
-            </footer>
     </div>
 </body>
 </html>
