--- a/personal-site/index.html
+++ b/personal-site/index.html
@@ -61,7 +61,6 @@
                 </a>
                 <h2>Build Endurance</h2>
             </section>
-            </div> 
         </main>
 
         
@@ -96,12 +95,11 @@
                 </section>
         </footer>
         <div id="copyright">
-            <a id="logo_link" href="index.html">
+            <a id="logo_link-two" href="index.html">
                 <img class="running-logo-two" src="pictures/running-logo.png" alt="Training4u Logo">
             </a>
             <p> Training4u &copy; 2022 - Ethan Smith</p>
-            </div>
+        </div>
     </div>
-
 </body>
 </html>
