--- a/personal-site/index.html
+++ b/personal-site/index.html
@@ -26,13 +26,12 @@
             <div id="hero-box-one">
                 <img id="hero-img-one" src="pictures/woman-running.jpg" alt="Training Plans">
             </div>
-
             <section id="hero-msg-one">
                 <h1 class="home-title-one"> Start Now With Training4u</h1>
                 <h4>Make your running dreams come true with our unique and personal training plans </h4>
             </section>
         </div>
-        <div id="hero-two">>
+        <div id="hero-two">
             <div id="hero-box-two">
                 <img id="hero-img-two" src="pictures/running-group.png" alt="group training">
             </div>
