--- a/personal-site/site-plan.html
+++ b/personal-site/site-plan.html
@@ -222,13 +222,13 @@
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="pictures/training.jpg" alt="page 2 wireframe">
+      <img src="pictures/subpage-one.jpg" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="pictures/coaching.jpg" alt="page 3 wireframe">
+      <img src="pictures/subpage-two.jpg" alt="page 3 wireframe">
     </main>
   </body>
 
