--- a/personal-site/email-list.html
+++ b/personal-site/email-list.html
@@ -7,7 +7,7 @@
     <title>Email list</title>
 </head>
 <body>
-    <h1>We have recived your Email</h1>
+    <h1>You Have Been Added To Our Email list</h1>
     <a id="home-link" href="index.html">
         <p>Click Here To Be Redirected</p>
     </a>
