--- a/personal-site/coaches.html
+++ b/personal-site/coaches.html
@@ -25,7 +25,7 @@
     <div id="coaching-hero">
     <div class="background">
         <div id="coach-msg">
-        <h2>A Fully Custom Expeirence</h2>
+        <h2>A Fully Custom Experience</h2>
         <p>Our online coaches will help you customize your training plan as you go. Just click here to get started! </p>
         <div class="train-box">
         <a class="training-button" href="training.html"> Training Plan</a>
