--- a/personal-site/index.html
+++ b/personal-site/index.html
@@ -36,7 +36,7 @@
                 <img id="hero-img-two" src="pictures/running-group.png" alt="group training">
             </div>
             <section id="hero-msg-two">
-                <h1 class="home-title-two">Meet other local runners </h1>
+                <h1 class="home-title-two">Meet Other Local Runners </h1>
                 <h4>Feel free to come to our monthly workouts, check our mailing list for information! </h4>
             </section>
         </div>
