--- a/personal-site/training.html
+++ b/personal-site/training.html
@@ -63,7 +63,7 @@
             </div>
             <div id="middle-distance-plan">
             <h3>Middle Distance Runner</h3>
-            <p>Are you trying to get faster in the Mile, 3200m or even 5k? Then we suggest a good mix of endurance and speed workouts with a heavy emphasis on stregnth. Building an efficient base is key at the start of this plan and then combining that with fast closing speed!  </p>
+            <p>Are you trying to get faster in the Mile, 3200m or even 5k? Then we suggest a good mix of endurance and speed workouts with a heavy emphasis on strength. Building an efficient base is key at the start of this plan and then combining that with fast closing speed!  </p>
             </div>
         </section>
 
