--- a/personal-site/training.html
+++ b/personal-site/training.html
@@ -27,7 +27,7 @@
             <img class="journey-img" src="pictures/journey.jpg" alt="Mountain Running">
         </div>
         <section class="msg-training">
-            <h2>The Start Of A journey </h2>
+            <h2>The Start Of A Journey </h2>
             <p>We are not just another generic training plan. With our personalized touch, you can begin your running journey now! We will try to keep you injury free and constantly progressing. </p>
             <div class='coaching-box'>
                 <a class='coaching' href="coaches.html">Coaching</a>
