--- a/personal-site/site-plan.html
+++ b/personal-site/site-plan.html
@@ -162,8 +162,13 @@
 
       </p>
       <p>Images for the Home page</p>
-        <img src="pictures/asfault-running.jpg" alt="road running home">
-        <img src="pictures/track.jpg" alt="track running home">
+        <img src="pictures/asfault-running.jpg" alt="road running home"
+        width="400" 
+        height="400" />
+        
+        <img src="pictures/track.jpg" alt="track running home"        
+        width="400" 
+        height="400" />
 
       </ul>
       <h3>Training Plan </h3>
@@ -183,8 +188,12 @@
         running type.
       </p>
       <p>Images for the Page 2</p>
-        <img src="pictures/plymetrics.jpg" alt="injury free for page 2">
-        <img src="pictures/woman-running.jpg" alt="aerobic base for page 2">
+        <img src="pictures/plymetrics.jpg" alt="injury free for page 2"
+        width="400" 
+        height="400" />
+        <img src="pictures/woman-running.jpg" alt="aerobic base for page 2"
+        width="400" 
+        height="400" />
 
       </ul>
       <h3>Coaches</h3>
@@ -201,8 +210,12 @@
       
       </p>
       <p>Images for the Page 3</p>
-        <img src="pictures/coaches.jpg" alt="coaching staff  for page 3">
-        <img src="pictures/workouts.jpg" alt="workout images for page3">
+        <img src="pictures/coaches.jpg" alt="coaching staff  for page 3"
+        width="400" 
+        height="400" />
+        <img src="pictures/workouts.jpg" alt="workout images for page3"
+        width="400" 
+        height="400" />
 
       </ul>
       <hr>
